# siim-isic-melanoma-classification

./: .gitignore  .isort.cfg  Dvcfile  README.rst  dupes.csv.dvc  dvc.yaml  makefile  params.yaml  pyproject.toml  resize.dvc  resize_cnn.dvc  resize_images.dvc  split.dvc  train.dvc  train_cnn.dvc  train_lr.dvc  train_resnet_128.dvc
metrics/: .gitignore  cv.metric  l1_efficientnet_256_cv.metric  l1_efficientnet_384_cv.metric  l1_efficientnet_tta_256_cv.metric  l1_efficientnet_tta_384_cv.metric  l1_resnet_128_cv.metric  l1_resnet_256_cv.metric  l1_resnet_cv.metric  l1_resnet_tta_128_cv.metric
models/: .gitignore
pipe/: add_extra_malig.py  constants.py  predict.py  predict_efficientnet_256.py  predict_efficientnet_384.py  predict_resnet_128.py  resize.py  resize_cnn.py  resize_images.py  split.py  split_with_extra.py  train.py  train_128.py  train_cnn.py  train_efficientnet_128.py  train_efficientnet_256.py  train_efficientnet_384.py  train_lr.py  train_resnet_128.py  train_resnet_256.py
siim_isic_melanoma_classification/: augmentation.py  cnn.py  constants.py  lookahead.py  lr_scheduler.py  model_selection.py  over9000.py  prepare.py  ralamb.py  submit.py  utils.py
subs/: .gitignore
tests/: test_siim_isic_melanoma_classification.py
