[tool.poetry]
name = "siim-isic-melanoma-classification"
version = "0.1.0"
description = ""
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
scikit_learn = "^0.23.1"
mlxtend = "^0.17.2"
lightgbm = "^2.3.1"
torchvision = {url = "https://download.pytorch.org/whl/nightly/cu102/torchvision-0.8.0.dev20200720-cp37-cp37m-linux_x86_64.whl"}
matplotlib = "^3.2.1"
pillow-simd = "^7.0.0"
opencv-python = "<=4.2.0.34"
pytorch-lightning = "^0.8.5"
albumentations = "^0.4.5"
jupyterlab = "^2.1.5"
mlflow = "^1.9.1"
"flufl.lock" = "<=3.2"
torch = {url = "https://download.pytorch.org/whl/nightly/cu102/torch-1.7.0.dev20200720-cp37-cp37m-linux_x86_64.whl"}
ipywidgets = "^7.5.1"
tensorboard = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
kaggle = "^1.5.6"
dvc = "^1.00.0"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.8.2"
ipdb = "^0.13.2"
ipython = "^7.14.0"
rope = "^0.17.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
